# lick_searchable_archive

./: .gitignore  LICENSE  README.rst  admin_scripts.yml  appservers.yml  backend_host.yml  dbservers.yml  development  django_apps.yml  django_site.yml  frontend.yml  frontend_host.yml  ingest_watchdog.yml  local_watchdog.yml  ops  remote_watchdog.yml  setup.cfg  setup.py  single_host_archive.yml  webserver.yml
config/: lick_archive_dev.conf
db/: archive_db_backup.sh  archive_schema.py  bulk_ingest_metadata.py  create_schema.py  db_utils.py  pgsphere.py  retry_bulk_failures.py
db/ingest/: ingest_utils.py  metadata_reader.py  reader.py  shane_ao_sharcs.py  shane_kast.py
db/unit_test/: get_test_header.py  test_AO_sharcs.py  test_reader.py  test_shane_kast.py  utils.py
deploy/: backend_host.yml  django_apps.yml  dual_host_archive.yml  frontend.yml  frontend_host.yml  ingest_watchdog.yml  ops  remote_watchdog.yml  single_host_archive.yml
deploy/host_vars/: quarry.ucolick.org
dev_test/: test_pgsphere.py
doc/: Makefile  conf.py  index.rst  schema.rst
doc/api/: api.rst  ingest.admin.rst  ingest.apps.rst  ingest.migrations.0001_initial.rst  ingest.migrations.rst  ingest.models.rst  ingest.rst  ingest.serializers.rst  ingest.tasks.rst  ingest.tests.rst  ingest.urls.rst  ingest.views.rst  lick_searchable_archive.asgi.rst  lick_searchable_archive.celery.rst  lick_searchable_archive.rst  lick_searchable_archive.urls.rst  lick_searchable_archive.wsgi.rst  manage.rst  modules.rst  query.admin.rst  query.apps.rst  query.query_api.rst  query.rst  query.sqlalchemy_django_utils.rst  query.urls.rst  query.views.rst  schema.rst
doc/developer/: access_rules.rst  architecture.rst  code.rst  configuration.rst  database.rst  deployment.rst  maintenance.rst  manual_test.rst  todo.rst  ucsc_specific_config.rst
doc/user/: intro.rst
frontend/: Makefile  build_frontend.mjs  package.json
frontend/build_scripts/: build_css.mjs  build_js.mjs  render_jinja_to_html.py
frontend/doc/: Makefile  how_to_use.rst  template.txt
host_vars/: 192.168.122.39  192.168.122.96  quarry.ucolick.org
ingest/: archive_schema.py  bulk_ingest_metadata.py  create_schema.py  db_utils.py  pgsphere.py
lick_archive/: archive_config.py  data_dictionary.py  django_utils.py  ingest_failures.2008.txt  lick_archive_client.py  lick_archive_ingest_client.py  resync_utils.py  sched_db.py  script_utils.py
lick_external/: __init__.py  keyword_db.py  ownerhints.py  sched_db.py
lick_searchable_archive/: db.sqlite3  manage.py  version.py
scripts/: build_data_dictionary_docs.py  build_data_dictionary_json.py  create_schema.py  gen_secret_key.py  ingest_watchdog.py  retry_bulk_failures.py
test/: archive_test_config.ini  conftest.py  django_test_settings.py  pytest.ini  test_utils.py
unit_test/: django_test_settings.py  test_AO_sharcs.py  test_paginator.py  test_query_api.py  test_query_serializer.py  test_reader.py  test_shane_kast.py  test_sqlalchemy_django.py  utils.py
(+283 files in other folders)
