[metadata]
name = lickarchive
description = Lick Observatory Archive Software
long_description = file: README.rst
long_description_content_type = text/x-rst
author = UC Observatories
author_email = nics@ucolick.org
license = BSD-3
url = https://github.com/badpandabear/lick_searchable_archive
edit_on_github = False
github_project = badpandabear/lick_searchable_archive
keywords = UCO, Lick, astronomy, data archive
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Documentation :: Sphinx
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
zip_safe = False
use_2to3=False
packages = find:
python_requires = >=3.8,<3.10
setup_requires = setuptools_scm
include_package_data = True
install_requires =
    numpy>=1.20
    sqlalchemy
    psycopg2-binary
    ansible
    Celery
    astropy
    django
    django-rest-framework
    extension-helpers>=0.1
    packaging>=0.19
    scipy>=1.6
    matplotlib>=3.3
    IPython>=7.10.0
#scripts =

[options.extras_require]
test =
    pytest>=6.0.0
    pytest-astropy
    tox
    pytest-cov
    coverage
    codecov
docs =
    sphinx<6,>=1.6
    docutils<0.18
    sphinx-automodapi
    sphinx_rtd_theme==1.1.1
dev =
    pytest>=6.0.0
    pytest-astropy
    tox
    pytest-cov
    coverage
    codecov
    sphinx<6,>=1.6
    docutils<0.18
    sphinx-automodapi
    sphinx_rtd_theme==1.1.1

[options.package_data]
* = *.rst, *.txt, data/*, data/*/*, data/*/*/*, data/*/*/*/*, data/*/*/*/*/*, data/*/*/*/*/*/*

#[options.entry_points]
#console_scripts =

[tool:pytest]
testpaths = "lick_searchabel_archive/tests"

#[coverage:run]
#omit =
#    pypeit/_astropy_init*
#    pypeit/conftest.py
#    pypeit/*setup_package*
#    pypeit/tests/*
#    pypeit/*/tests/*
#    pypeit/extern/*
#    pypeit/version*
#    */pypeit/_astropy_init*
#    */pypeit/conftest.py
#    */pypeit/*setup_package*
#    */pypeit/tests/*
#    */pypeit/*/tests/*
#    */pypeit/extern/*
#    */pypeit/version*

#[coverage:report]
#exclude_lines =
#    # Have to re-enable the standard pragma
#    pragma: no cover
#    # Don't complain about packages we have installed
#    except ImportError
#    # Don't complain if tests don't hit assertions
#    raise AssertionError
#    raise NotImplementedError
#    # Don't complain about script hooks
#    def main\(.*\):
#    # Ignore branches that don't pertain to this version of Python
#    pragma: py{ignore_python_version}
#    # Don't complain about IPython completion helper
#    def _ipython_key_completions_


